--- a/index2.html
+++ b/index2.html
@@ -40,8 +40,8 @@
             <p>
                 Je suis étudiant en première année de BUT Réseaux et Télécommunications. Je suis <u>observateur</u> et <u>persévérant</u> dans le travail que je fournis. Deux autres de mes qualités sont l'<u>esprit d'équipe</u> et <u>l'adaptabilité</u>. <br>
                 J'ai choisi cette formation car l'aspect global des réseaux m'intéressait. En effet, je voulais en savoir un peu plus sur la constitution des réseaux informatiques et leur fonctionnement.
-                La spécialisation en Cybersécurité a aussi contribué à mon choix d'orientation. <br>
-                Dans le but de mes études, je recherche actuellement une alternance à partir de septembre 2024, aux alentours de Clermont-Ferrand (63) ou de Brive-la-Gaillarde (19) à un rythme de 1 mois / 1 mois.
+                La spécialisation en Cybersécurité a aussi contribué à mon choix d'orientation. De plus, j'ai validé le premier semestre de la formation. <br>
+                Dans le but de mes études, je recherche actuellement une alternance à partir de septembre 2024, aux alentours de Clermont-Ferrand (63) ou de Terrasson-Lavilledieu (24) à un rythme de 1 mois / 1 mois.
             </p>
         </section>
 
@@ -105,53 +105,57 @@
             <h4>Les jauges indiquent le niveau qui est attendu en BUT Réseaux et Télécommunications.</h4>
             <h3>Compétences techniques</h3>
             <ul>
-                <li><label for="reseaux">Réseaux :</label>
-                <progress id="reseaux" max="100" value="90">80%</progress>80%</li> <br>
-                <img id="reseau" src="img/reseau.jpg" alt="Plan réseaux"> <br><br>
+                <h3><u>Réseaux : </u></h3>
                 <ul>
-                    <li>Contexte : Configuration d'un point d'accès wifi et base du routage.</li>
-                    <li>Missions :</li>
+                    <li><label for="AP">Configuration d'un point d'accès wifi et base du routage :</label>
+                    <progress id="AP" max="100" value="90"></progress>90%</li> <br>
+                    <img id="reseau" src="img/reseau.jpg" alt="Plan réseaux"> <br><br>
                     <ul>
-                        <li>Configuration du point d'accès wifi.</li>
-                        <li>Activation du routage et du NAT sur le PC1.</li>
-                        <li>Connexion du PC2 au point d'accès via le wifi.</li>
-                        <li>Réalisation de ping pour s'assurer de la connectivité des 2 appareils.</li>
-                        <li>Vérification de l'accès à internet avec le PC2.</li>
+                        <li>Missions :</li>
+                        <ul>
+                            <li>Configuration du point d'accès wifi.</li>
+                            <li>Activation du routage et du NAT sur le PC1.</li>
+                            <li>Connexion du PC2 au point d'accès via le wifi.</li>
+                            <li>Réalisation de ping pour s'assurer de la connectivité des 2 appareils.</li>
+                            <li>Vérification de l'accès à internet avec le PC2.</li>
+                        </ul>
+                    </ul> 
+                </ul>
+                <br>
+
+                <h3><u>Programmation :</u></h3>
+                <ul>
+                    <li><label for="portfolio">Réalisation du Portfolio :</label>
+                    <progress id="portfolio" max="100" value="80"></progress>80%</li>  <br>
+                    <img id="programme" src="img/html.png" alt="page html du portfolio"> <br><br>
+                    <ul>
+                        <li>Missions :</li>
+                        <ul>
+                            <li>Création de sections pour que l'utilisateur puisse naviguer sur la page web.</li>
+                            <li>Ecriture du code HTML pour notamment faire les listes.</li>
+                            <li>Ecriture du CSS.</li>
+                        </ul>
                     </ul>
                 </ul>
-            </ul>
-            <br>
-            <ul>
-                <li><label for="programmation">Programmation :</label>
-                <progress id="programmation" max="100" value="80">80%</progress>80%</li>  <br>
-                <img id="programme" src="img/html.png" alt="page html du portfolio"> <br><br>
+                <br>
+
+                <h3><u>Télécommunications :</u></h3>
                 <ul>
-                    <li>Contexte : Réalisation du Portfolio.</li>
-                    <li>Missions :</li>
+                    <li><label for="ethernet">Etude d'un câble Ethernet :</label>
+                    <progress id="ethernet" max="100" value="30">30%</progress>30%</li> <br>
+                    <img id="ethernet" src="img/ethernet.png" alt="Étude d'un câble Ethernet"> <br><br>
                     <ul>
-                        <li>Création de sections pour que l'utilisateur puisse naviguer sur la page web.</li>
-                        <li>Ecriture du code HTML pour notamment faire les listes.</li>
-                        <li>Ecriture du CSS.</li>
+                        <li>Missions :</li>
+                        <ul>
+                            <li>Observation de l'intérieur du câble Ethernet.</li>
+                            <li>Mesure de la résistance avec un multimètre.</li>
+                            <li>Création d'un signal impulsionnel.</li>
+                            <li>Réalisation du montage.</li>
+                            <li>Relevé du temps de propagation entre les 2 signaux.</li>
+                        </ul>
                     </ul>
                 </ul>
-            </ul>
-            <br>
-            <ul>
-                <li><label for="telecom">Télécommunications :</label>
-                <progress id="telecom" max="100" value="30">30%</progress>30%</li> <br>
-                <img id="ethernet" src="img/ethernet.png" alt="Étude d'un câble Ethernet"> <br><br>
-                <ul>
-                    <li>Contexte : Etude d'un câble Ethernet.</li>
-                    <li>Missions :</li>
-                    <ul>
-                        <li>Observation de l'intérieur du câble Ethernet.</li>
-                        <li>Mesure de la résistance avec un multimètre.</li>
-                        <li>Création d'un signal impulsionnel.</li>
-                        <li>Réalisation du montage.</li>
-                        <li>Relevé du temps de propagation entre les 2 signaux.</li>
-                    </ul>
-                </ul>
-            </ul>
+                <br>
 
             <h3>Qualités</h3>
 
